// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cell component > renders correctly 1`] = `
<div>
  <input
    class="border border-black"
    value=""
  />
</div>
`;

exports[`Cell component > renders formulas 1`] = `
<div>
  <input
    class="border border-black"
    value="4"
  />
</div>
`;

exports[`Cell component > renders numbers 1`] = `
<div>
  <input
    class="border border-black"
    value="42"
  />
</div>
`;

exports[`Cell component > renders text 1`] = `
<div>
  <input
    class="border border-black"
    value="Hello World!"
  />
</div>
`;

exports[`Grid component > renders correctly 1`] = `
<div>
  <div
    class="grid h-0 w-full flex-grow overflow-x-scroll overflow-y-scroll"
    style="grid-template-columns: 1fr repeat(1, 1fr); grid-template-rows: 1fr repeat(2, 1fr);"
  >
    <span
      class="border-b border-r border-gray-600 bg-gray-100"
    />
    <span
      class="border-l border-r border-gray-600 bg-gray-100 text-center"
    >
      A
    </span>
    <span
      class="border-b border-t border-gray-600 bg-gray-100 text-center"
    >
      1
    </span>
    <input
      class="border border-black"
      value=""
    />
  </div>
</div>
`;
